02Oct01=======================================================================
1. fixed the 'ever lengthening msg' syndrome and probably made the whole
thing more reliable at the same time.
2. do some restructuring of the msg system and upissue the version no.
01Oct01=======================================================================
1. made login info not the default
2. change the looping protoection for PC16/17/19/21 and also be more rigorous
in who we accept which PC16/17/21's from.
3. fix MAJOR disconnect bug introduced accidentally in the NP work.
4. Try each badword with an S on the end as well and also check for 'f.u   c'
type things as well (this only works for a few wellknown english ones).
5. Go back to the old way of caching commands (but without the silly warnings
because I know better what I am doing now). This allows symbolic debugging
of commands again without coredumps. Hurrah!
6. Add badword handling for messages. Users will get rude messages back if
they try to send naughty words in msgs. Incoming messages with badwords will
be dropped on receipt and their contents logged.
7. and if you swear 3 or more times you are unceremoniously logged out.
30Sep01=======================================================================
1. made some small bug fixes in rspf checking and also messages. 
23Sep01=======================================================================
1. I have incorporated Steve's (K9AN) lastest sh/sun and sh/moon stuff which
copes much better with some of the end effects that occur in these calc-
ulations. You can now also see up to a year into the past or future. The 
results compare favourably with the US Naval Obs (unlike certain other
software's output which "I would not want to use their results to aim my 
moon rocket..."). It also fixes some ambiguity about which day the results
are actually for.
21Sep01=======================================================================